[metadata]
name = os-brick
description = OpenStack Cinder brick library for managing local volume attaches
long_description = file: README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/os-brick/
python_requires = >=3.9
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    os_brick
data_files =
    etc/ = etc/*

[entry_points]
oslo.config.opts =
    os_brick = os_brick.opts:list_opts
    os_brick.lightos = os_brick.initiator.connectors.lightos:list_opts
oslo.config.opts.defaults =
    os_brick = os_brick.opts:set_defaults

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
html_report = mypy-report
no_implicit_optional = true

[options]
packages = os_brick
